<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/bar"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/movie_database"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_discover"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/discover"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_favorites"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/favorites"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_sync"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="SYNC"
        android:textSize="12sp"
        android:textStyle="bold"/>
</LinearLayout>