<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="6dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#66388E3C"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movies_name"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_weight=".70"
                android:layout_width="0dp"/>

            <TextView
                android:id="@+id/numberOfStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/star"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/star_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/star"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>